// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direct instance method applyByPath 1`] = `
Object {
  "args": Array [
    "getClass",
    [Function],
  ],
}
`;

exports[`direct instance method call 1`] = `
Object {
  "args": Array [
    "getClass",
    [Function],
  ],
}
`;

exports[`direct instance property getter 1`] = `
Object {
  "args": Array [
    "is_active (before)",
    Promise {},
  ],
}
`;

exports[`direct instance property getter 2`] = `
Object {
  "args": Array [
    "is_active",
    false,
  ],
}
`;

exports[`direct instance property getter 3`] = `
Object {
  "args": Array [
    "is_active (before)",
    false,
  ],
}
`;

exports[`direct instance property getter 4`] = `
Object {
  "args": Array [
    "is_active",
    false,
  ],
}
`;

exports[`direct instance property setByPath 1`] = `
Object {
  "args": Array [
    "is_active: (before)",
    false,
    true,
  ],
}
`;

exports[`direct instance property setByPath 2`] = `
Object {
  "args": Array [
    "is_active: (after)",
    false,
  ],
}
`;

exports[`direct instance property setter 1`] = `
Object {
  "args": Array [
    "is_active: (before)",
    false,
    false,
  ],
}
`;

exports[`direct instance property setter 2`] = `
Object {
  "args": Array [
    "is_active: (after)",
    false,
  ],
}
`;

exports[`direct instance property subscription 1`] = `
Object {
  "args": Array [
    "is_active",
    false,
  ],
}
`;

exports[`init with fromData 1`] = `
Object {
  "args": Array [
    "before sync",
    Object {
      "id": "PdOJWFBgNPUEMhX1JlsDm7zWy012",
    },
  ],
}
`;

exports[`init with fromData 2`] = `
Object {
  "args": Array [
    "instance",
    AdvisorModel {},
  ],
}
`;

exports[`init with fromData 3`] = `
Object {
  "args": Array [
    "instance.id",
    "PdOJWFBgNPUEMhX1JlsDm7zWy012",
  ],
}
`;

exports[`init with fromData 4`] = `
Object {
  "args": Array [
    "instance.created_at",
    "2021-02-21T07:23:19.372269+00:00",
  ],
}
`;
